--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,7 +1,6 @@
 <div class="p-5 mb-4 bg-dark text-light">
     <h1 class="display-4 text-light">API What's New</h1>
-    <P class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati soluta sint impedit provident, necessitatibus facere.</P>
-    <hr class="my-4">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque assumenda dicta voluptatum voluptatem magnam quos excepturi nesciunt corporis unde quibusdam!</p>
-    <a href="https://github.com/Romo43/Capital28.github.io" class="btn btn-outline-light" target="_blank">Repositorie</a>
+    <P class="lead">The objective of the project is to notify Capital 28 users about notices, new functionalities and bug fixes both through a panel in the webadmin and in a module in the mobile App</P>
+    <hr class="my-4 bg-light">
+    <a href="https://github.com/Romo43/Capital28.github.io" class="btn btn-outline-light" target="_blank">Repository</a>
 </div>
