--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- Custom CSS-->
-    <link rel="stylesheet" href="/src/public/style.css">
+    <link rel="text/html" href="/src/public/style.css">
 </head>
 <body>
     {{>navigation}}
